Fix talks spacing

--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -56,11 +56,12 @@ header[role=main]{
 }
 
 .books, .talks{ padding-left: 0; }
-
-.book{
+.book, .talk{
   list-style:none;
   margin-bottom: $default-spacing;
+}
 
+.book{
   img{
     width:60px;
     vertical-align:top;
@@ -74,7 +75,6 @@ header[role=main]{
 }
 
 .talk{
-  list-style:none;
   .title{ font-weight:bold; }
   .author{ display:block; }
 }
